--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		        <th class="td-2">3.00 <br> Lorem</th>
 		    </tr>
 		    <tr>
-		        <td rowspan="2" class="td-4 fon6">Lorem ipsum dolor sit amet consectetur adipisicing</td>
+		        <td rowspan="2" class="td-4 fon6">Lorem ipsum dolor sit amet, consectetur adipisicing.</td>
 		        <td class="td-4 fon7">1.00 Worth it</td>
 		        <td class="fon6 fon5-1">Count <br> <br>% lorem ipsum dolor sit amet</td>
 		        <td class="td-3">57 <br> <br><strong>38.2%</strong></td>
